# brahma-quant

./: .gitignore  BRAHMA_360_V3_DESIGN.md  BRAHMA_TRAINING_PLAN.md  BRAHMA_V2_DESIGN.md  DESIGN_INSTITUTE.json  DESIGN_INSTITUTE_V2.json  DHARMA_DEEP_RESEARCH_v2_2026.md  DHARMA_EVALUATION_REPORT_2026.md  DHARMA_JOINT_RESEARCH_2026.md  Dockerfile.research_webhook  FANTAN_BLUEPRINT_V3.json  README.md  SIGNAL_FORMAT.md  STAR.md  SYSTEM_ARCHITECTURE_V2.md  SYSTEM_ENGINEERING_v1.md  SYSTEM_MANIFEST.json  SYSTEM_VERSION.json  brahma_analyze.py  config.py  dharma_data_bridge.py  dharma_full_research.py  dharma_v6_backtest.py  docker-compose.research.yml  emergency_close.py  executor.py  gen_eth_deep.py  gen_long_map.py  gen_precision_map.py  push_hub.py  pyproject.toml  render.yaml  requirements-core.txt  requirements-dev.txt  requirements-full.txt  requirements-live-lite.txt  requirements-research.txt  requirements.txt  research_bridge.py  safe_binance_public_client.py  (+6 more)
.deploy/: deploy_log.jsonl
arch/: README.md
assets/: pipeline_ascii.txt
audit_tools/: execution_ast_audit.py  import_audit.py  no_trade_guard.py  signal_only_dynamic_audit.py
brahma_brain/: ARCHITECTURE.md  BRAHMA_SENTINEL.md  __init__.py  alpha_market_filter.py  analysis_snapshot.py  auto_review.py  bollinger_engine.py  brahma_360.py  brahma_analysis_runner.py  brahma_brain.py.pre_surgery_bak  brahma_bus.py  brahma_ci.py  brahma_ci_v2.py  brahma_core.py  brahma_core_entry.py  brahma_event_bus.py  brahma_health.py  brahma_logger.py  brahma_mem_compressor.py  brahma_orchestrator.py  brahma_parallel_engine.py  brahma_state.json  brainlog.py  bull_regime_injector.py  capital_allocator.py  causal_regime_verifier.py  circuit_breaker.py  coingecko_client.py  coinglass_engine.py  coinglass_fallback.py  conflict_resolver.py  counterfactual_score_check.py  cross_market_engine.py  cvd_engine.py  data_cache.py  dharma_data_bridge.py  dharma_nodes.py  dharma_online_learner.py  divergence_engine.py  dynamic_sl.py  (+80 more)
config/: brahma-trading.cron  cron_jobs_cac.json  safety.yaml
configs/: full_auto_live_lite.yaml
data/: BRAHMA_ANALYSIS_CANONICAL.md  BRAHMA_ANALYSIS_CANONICAL_v2.md  adaptive_order_state.json.expired  auto_mode.flag  brahma_state.json  dharma_mass_log.txt  dharma_mass_tasks.pkl  dharma_pid.txt  dharma_sim_trades.pkl  dharma_sim_v3.pkl  dharma_stream_pid.txt  kronos_lgbm_model_lgb.txt  kronos_wf_model_lgb.txt  live_signal_log.jsonl  lstm_weights_BEAR_TREND.npz  lstm_weights_BULL_TREND.npz  position_sl_state.json  signal_bus.jsonl  smart_digest_latest.txt  vip_template_F.md  watchdog.pid  wuqu_positions.json  xgb_model.pkl
dharma/: DHARMA.md  DHARMA_NODES_REGISTRY.json  FANTAN_V11_DESIGN.md  FANTAN_V11_FINAL.md  ULTIMATE_PLAN.md  UPGRADE_REGISTRY.json  UPGRADE_SOP.md  __init__.py  anchored_wfv_v7.py  backtest_1000u.py  backtest_brahma_v4.py  backtest_true_brahma_v2.py  batch_research_pipeline.py  blind_factor_test.py  blueprint_writer.py  brahma_signal_lab_v1.py  build_fixed_dataset.py  calibrate.py  causal_discovery.py  clean_foundation_v1.py  combo_tester.py  dharma_100_test.py  dharma_2025_live_test.py  dharma_360_validator.py  dharma_bus.py  dharma_ci.py  dharma_core_v2.py  dharma_factor_engine.py  dharma_flywheel.py  dharma_report.py  dharma_system_backtest.py  dharma_weekly_report.py  factor_weights.yaml  fake_binance_cli.py  fetch_full_2019_2026.py  fetch_futures_data.py  foundation_futures_v1.py  fuzz_engine.py  gen_regime_matrix.py  kronos_m1_validator.py  (+23 more)
dharma_simfactory/: __init__.py  metrics.py  (+4 more)
(+2011 files in other folders)
