[tool.poetry]
name = "brahma-quant"
version = "6.0.0"
description = "梵天量化系统 — 全球顶级加密合约量化引擎"
authors = ["Brahma Design Institute"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python          = "^3.11"
numpy           = "^1.26"
pandas          = "^2.1"
requests        = "^2.31"
python-dotenv   = "^1.0"
hmmlearn        = "^0.3"
scikit-learn    = "^1.3"
lightgbm        = "^4.0"
torch           = {version = "^2.0", optional = true}
vectorbt        = {version = "^0.26", optional = true}
statsmodels     = "^0.14"
ta              = "^0.10"
ccxt            = "^4.0"
websocket-client = "^1.6"

[tool.poetry.extras]
ml      = ["torch"]
backtest = ["vectorbt"]
full    = ["torch", "vectorbt"]

[tool.poetry.group.dev.dependencies]
pytest          = "^7.4"
pytest-asyncio  = "^0.21"
black           = "^23.0"
ruff            = "^0.1"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
select = ["E", "F", "W"]
ignore = ["E501", "F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

# ── 梵天系统版本追踪 ──────────────────────────────────────────────
[tool.brahma]
version       = "6.0.0"
release_date  = "2026-07-08"
sharpe_target = 4.5
max_dd_target = 0.07
win_rate_target = 0.63
