[project]
name = "brahma-quant"
version = "0.6.0"
description = "Production-Grade Crypto Quantitative Trading System (Lean-inspired)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "pydantic>=2.5",
    "structlog>=24.1",
    "ccxt>=4.3",
    "requests>=2.31",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "black>=24.0",
    "ruff>=0.5",
    "mypy>=1.10",
]
research = [
    "vectorbt>=0.26",
    "scikit-learn",
    "statsmodels",
    "lightgbm",
]
bus = ["redis>=5.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["brahma_v6*"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
