[project]
name = "brahma-quant"
version = "2.0.0"
description = "Institutional-grade Crypto Quantitative Trading System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "pyarrow>=15.0",
    "pydantic>=2.5",
    "PyYAML>=6.0",
    "structlog>=24.1",
    "ccxt>=4.3",
    "requests>=2.31",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "black>=24.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML",
]

research = [
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "statsmodels>=0.14",
    "lightgbm>=4.0",
    "numba>=0.59",
    "quantstats>=0.0.62",
    "plotly>=5.20",
    "vectorbt>=0.26",
]

live = [
    "redis>=5.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "brahma_brain*",
    "brahma_v6*",
    "dharma*",
    "dharma_simfactory*",
    "guardrails*",
    "nerve_system*",
    "utils*",
]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
